fix:adding overflow wrap

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -141,16 +141,6 @@ nav {
 
 
 @media (max-width: 960px) {
-  body {
-    max-width: 100vw !important;
-    overflow-x: hidden !important;
-    margin: 0px;
-  }
-
-  html {
-    overflow-x: hidden !important;
-  }
-
   nav {
     padding: 10px 40px;
   }
