--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 html,
-body {
+body,
+.overflow-wrap {
   max-width: 100%;
   overflow-x: hidden;
 }
